@@ -36,8 +36,10 @@ public class ErrorLoggingListener extends AgentBuilder.Listener.Adapter {
     @Override
     public void onError(String typeName, ClassLoader classLoader, JavaModule module, boolean loaded, Throwable throwable) {
         if (throwable instanceof MinimumClassFileVersionValidator.UnsupportedClassFileVersionException) {
-            logger.warn("{} uses an unsupported class file version (pre Java 5) and can't be instrumented. " +
-                "Consider updating to a newer version of that library.", typeName);
+            logger.warn("{} uses an unsupported class file version (pre Java {}}) and can't be instrumented. " +
+                "Consider updating to a newer version of that library.",
+                typeName,
+                ((MinimumClassFileVersionValidator.UnsupportedClassFileVersionException)throwable).getMinVersion());
         } else {
             if (throwable.getMessage().contains("Cannot resolve type description")) {
                 logger.info(typeName + " refers to a missing class.");
