@@ -37,9 +37,16 @@ import org.objectweb.asm.ClassVisitor;
 
 public enum MinimumClassFileVersionValidator implements AsmVisitorWrapper {
 
-    INSTANCE;
+    V1_4(ClassFileVersion.JAVA_V4, new UnsupportedClassFileVersionException("4")),
+    V1_5(ClassFileVersion.JAVA_V5, new UnsupportedClassFileVersionException("5"));
 
-    private static final ClassFileVersion MINIMUM_CLASS_FILE_VERSION = ClassFileVersion.JAVA_V5;
+    private final ClassFileVersion minimumClassFileVersion;
+    private final UnsupportedClassFileVersionException exception;
+
+    MinimumClassFileVersionValidator(ClassFileVersion minimumClassFileVersion, UnsupportedClassFileVersionException exception) {
+        this.minimumClassFileVersion = minimumClassFileVersion;
+        this.exception = exception;
+    }
 
     @Override
     public ClassVisitor wrap(TypeDescription instrumentedType, ClassVisitor classVisitor, Implementation.Context implementationContext,
@@ -48,8 +55,8 @@ public enum MinimumClassFileVersionValidator implements AsmVisitorWrapper {
             @Override
             public void visit(int version, int access, String name, String signature, String superName, String[] interfaces) {
                 final ClassFileVersion classFileVersion = ClassFileVersion.ofMinorMajor(version);
-                if (!classFileVersion.isAtLeast(MINIMUM_CLASS_FILE_VERSION)) {
-                    throw UnsupportedClassFileVersionException.INSTANCE;
+                if (!classFileVersion.isAtLeast(minimumClassFileVersion)) {
+                    throw exception;
                 }
                 super.visit(version, access, name, signature, superName, interfaces);
             }
@@ -67,10 +74,15 @@ public enum MinimumClassFileVersionValidator implements AsmVisitorWrapper {
     }
 
     public static class UnsupportedClassFileVersionException extends RuntimeException {
-        static final UnsupportedClassFileVersionException INSTANCE = new UnsupportedClassFileVersionException();
 
-        private UnsupportedClassFileVersionException() {
-            // singleton
+        private final String minVersion;
+
+        private UnsupportedClassFileVersionException(String minVersion) {
+            this.minVersion = minVersion;
+        }
+
+        public String getMinVersion() {
+            return minVersion;
         }
 
         /*
