@@ -49,7 +49,6 @@ import org.apache.commons.math3.stat.StatUtils;
 import org.apache.commons.pool2.impl.CallStackUtils;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.slf4j.event.SubstituteLoggingEvent;
@@ -266,7 +265,7 @@ class InstrumentationTest {
             Collections.singletonList(new MathInstrumentation()));
         // if the instrumentation applied, it would return 42
         // but instrumenting old class file versions could lead to VerifyErrors in some cases and possibly some more shenanigans
-        // so we we are better off not touching Java 1.4 code at all
+        // so we we are better off not touching Java 1.3 code (like org.apache.commons.math.util.MathUtils) at all
         assertThat(MathUtils.sign(-42)).isEqualTo(-1);
     }
 
@@ -356,6 +355,24 @@ class InstrumentationTest {
 
         assertThat(StatUtilsInstrumentation.enterCount).hasPositiveValue();
         assertThat(StatUtilsInstrumentation.exitCount).hasPositiveValue();
+    }
+
+    @Test
+    void testPatchClassFileVersionJava4ToJava7CommonsMath() {
+        org.apache.log4j.LogManager.exists("not");
+
+        // retransforming classes and patch to bytecode level 51 (Java 7)
+        ElasticApmAgent.initInstrumentation(tracer,
+            ByteBuddyAgent.install(),
+            Collections.singletonList(new LogManagerInstrumentation()));
+
+        assertThat(LogManagerInstrumentation.enterCount).hasValue(0);
+        assertThat(LogManagerInstrumentation.exitCount).hasValue(0);
+
+        org.apache.log4j.LogManager.exists("not");
+
+        assertThat(LogManagerInstrumentation.enterCount).hasPositiveValue();
+        assertThat(LogManagerInstrumentation.exitCount).hasPositiveValue();
     }
 
     @Test
@@ -787,6 +804,38 @@ class InstrumentationTest {
         @Override
         public ElementMatcher<? super TypeDescription> getTypeMatcher() {
             return named(StatUtils.class.getName());
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return any();
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return Collections.singletonList("test");
+        }
+
+    }
+
+    public static class LogManagerInstrumentation extends ElasticApmInstrumentation {
+
+        public static AtomicInteger enterCount = GlobalVariables.get(LogManagerInstrumentation.class, "enterCount", new AtomicInteger());
+        public static AtomicInteger exitCount = GlobalVariables.get(LogManagerInstrumentation.class, "exitCount", new AtomicInteger());
+
+        @Advice.OnMethodEnter(inline = false)
+        public static void onEnter() {
+            enterCount.incrementAndGet();
+        }
+
+        @Advice.OnMethodExit(inline = false)
+        public static void onExit() {
+            exitCount.incrementAndGet();
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named("org.apache.log4j.LogManager");
         }
 
         @Override
